@@ -6,7 +6,7 @@
     <title>Pomelo - Downloads</title>
     <link rel="icon" href="/favicon.png" type="image/png">
     <script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: Roboto, sans-serif;
