@@ -7,8 +7,8 @@
     <title>Pomelo Emulator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/f566336324.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Merriweather:wght@400&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="script.js" defer async></script>
 </head>
 <body>
 
